--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends "base_generic.html" %}
 {% block content %}
-<h1>BOARDGAME_CLUBS</h1>
+<h1>BOARDGAME CLUBS</h1>
 
-  <p>Welcome to <em>BOARDGAME_CLUBS_SITE</em>, join the club and have a fun playing!</p>
+  <p>Welcome to <em>Boardgame Clubs Site</em>, join the club and have a fun playing!</p>
 
-<h2>Dynamic content</h2>
+<h2>(ﾉ◕ヮ◕)ﾉ*:･ﾟ✧ </h2>
 
   <p>Our site has the following record counts:</p>
   <ul>
